roles/ingress/files/ing-harbor.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: harbor
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress
  namespace: harbor
spec:
  ingressClassName: nginx
  rules:
  - host: core.kubernetes.local
    http:
      paths:
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /service/
        pathType: Prefix
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /v2/
        pathType: Prefix
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /chartrepo/
        pathType: Prefix
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /c/
        pathType: Prefix
      - backend:
          service:
            name: harbor
            port:
              number: 80
        path: /
        pathType: Prefix
