roles/ingress/files/ing-registry.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: harbor
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress-registry
  namespace: harbor
spec:
  ingressClassName: nginx
  rules:
  - host: registry.kubernetes.local
    http:
      paths:
      - backend:
          service:
            name: harbor-registry
            port:
              number: 5000
        path: /
        pathType: Prefix
